--- a/selfstudy-rest/src/main/webapp/index.html
+++ b/selfstudy-rest/src/main/webapp/index.html
@@ -9,5 +9,11 @@
 <p>This is the home page. Please enjoy!</p>
 <p><a href="view_estimates.html">View estimates</a></p>
 <p><a href="view_estimate.html">View estimate</a></p>
+<p><a href="view_priorities.html">View priorities</a></p>
+<p><a href="view_priority.html">View priority</a></p>
+<p><a href="view_statuses.html">View statuses</a></p>
+<p><a href="view_status.html">View status</a></p>
+<p><a href="view_projects.html">View projects</a></p>
+<p><a href="view_project.html">View project</a></p>
 </body>
 </html>
