First examples of using persistent objects for ReSTful web service. I get a server error (code 500), if I use the @Entity objects directly (i.e. return @Entity objects from the ReSTful web service), but no error if I convert to DTO objects. So I'll keep to DTOs.

--- a/selfstudy-rest/src/main/webapp/view_project.html
+++ b/selfstudy-rest/src/main/webapp/view_project.html
@@ -52,7 +52,7 @@
     			        myFunction(jsObject);
     				}
     				else if(evt.target.status == 404) {
-    					alert("Notification does not exist");
+    					alert("Project does not exist");
     				}
     				else {
     					alert("Unexpected response status " + evt.target.status);    				}
