--- a/selfstudy-rest/src/main/webapp/view_projects.html
+++ b/selfstudy-rest/src/main/webapp/view_projects.html
@@ -5,28 +5,26 @@
         <title>View projects</title>
         <link rel="stylesheet" type="text/css" href="style/project.css" >
         <style>
+            #json {
+                display: block;
+            }
 	    </style>
-    </head>
-    <body>
-        <h1>Self study: View projects</h1>
-        <p>List of projects fetched with AJAX using GET</p>
-        <table id="datatable">
-            <tr>
-                <th>Id</th>
-                <th>Description</th>
-                <th>Priority</th>
-                <th>Status</th>
-                <th>&nbsp;</th>
-                <th>&nbsp;</th>
-                <th>&nbsp;</th>
-            </tr>
-        </table>
-        <p><a href="index.html">Home</a></p>
-        <pre id="json">&nbsp;</pre>
         <script>
 			var url = "rest/projects";
 
-			window.addEventListener("load", init, false);
+			window.addEventListener("load", initialise, false);
+
+			function initialise(evt) {
+			    fetchProjects();
+			}
+
+			function fetchProjects() {
+				var xmlhttp = new XMLHttpRequest();
+				xmlhttp.open("GET", url, true);
+				xmlhttp.addEventListener("readystatechange",handleRequest,false);
+				xmlhttp.setRequestHeader("Accept", "application/json");
+				xmlhttp.send();
+			}
 
 			function handleRequest(evt) {
 				if (evt.target.readyState == 4 ) {
@@ -35,7 +33,9 @@
 	    		        viewProjects(jsArray);
 					}
 					else {
-						alert("Unexpected response status " + evt.target.status);
+						//alert("Unexpected response status " + evt.target.status);
+                        sessionStorage.setItem("error", "Unexpected response status " + evt.target.status);
+						window.location.href = "error.html";
 					}
 				}
 			}
@@ -59,7 +59,7 @@
 					var cell_view = row.insertCell(4);
 					var cell_edit = row.insertCell(5);
 					var cell_remove = row.insertCell(6);
-					//
+					// set values
 					cell_id.innerHTML = "" + id;
 					cell_description.innerHTML = "" + description;
 					cell_priority.innerHTML = "" + priority_name;
@@ -105,14 +105,6 @@
 					cell_remove.appendChild(remove_button);
 
 			    }
-			}
-
-			function init(evt) {
-				var xmlhttp = new XMLHttpRequest();
-				xmlhttp.open("GET", url, true);
-				xmlhttp.addEventListener("readystatechange",handleRequest,false);
-				xmlhttp.setRequestHeader("Accept", "application/json");
-				xmlhttp.send();
 			}
 
 			function view(evt) {
@@ -166,7 +158,23 @@
 				}
 			}
 
-
-		</script>
+        </script>
+    </head>
+    <body>
+        <h1>Self study: View projects</h1>
+        <p>List of projects fetched with AJAX using GET</p>
+        <table id="datatable">
+            <tr>
+                <th>Id</th>
+                <th>Description</th>
+                <th>Priority</th>
+                <th>Status</th>
+                <th>&nbsp;</th>
+                <th>&nbsp;</th>
+                <th>&nbsp;</th>
+            </tr>
+        </table>
+        <p><a href="index.html">Home</a></p>
+        <pre id="json">&nbsp;</pre>
     </body>
 </html>
