--- a/selfstudy-rest/src/main/webapp/error.html
+++ b/selfstudy-rest/src/main/webapp/error.html
@@ -9,7 +9,7 @@
 
 			function initialise(evt) {
 			    var message = sessionStorage.getItem("error");
-			    alert("message " + message);
+			    //alert("message " + message);
 			    if(message == null) {
 			        message = "Internal error";
 			    }
