Now able to create a project. Date is treated as strings and converted to LocalDateTime when converting to/from ProjectDTO and ProjectEntity. When persisting an entity the created Id is returned.

--- a/selfstudy-rest/src/main/webapp/view_projects.html
+++ b/selfstudy-rest/src/main/webapp/view_projects.html
@@ -20,11 +20,11 @@
 			}
 
 			function fetchProjects() {
-				var xmlhttp = new XMLHttpRequest();
-				xmlhttp.open("GET", url, true);
-				xmlhttp.addEventListener("readystatechange",handleRequest,false);
-				xmlhttp.setRequestHeader("Accept", "application/json");
-				xmlhttp.send();
+				var httpRequest = new XMLHttpRequest();
+				httpRequest.open("GET", url, true);
+				httpRequest.addEventListener("readystatechange",handleRequest,false);
+				httpRequest.setRequestHeader("Accept", "application/json");
+				httpRequest.send();
 			}
 
 			function handleRequest(evt) {
