--- a/selfstudy-rest/src/main/webapp/create_project.html
+++ b/selfstudy-rest/src/main/webapp/create_project.html
@@ -10,11 +10,9 @@
             }
 		</style>
         <script>
-			var url = "rest/projects";
-
-			var estimateArray;
-			var priorityArray;
-			var statusArray;
+			//var estimateArray;
+			//var priorityArray;
+			//var statusArray;
 
             window.addEventListener("load",initialise,false);
 
@@ -27,35 +25,35 @@
 
    			function fetchEstimates() {
 				var queryUrl = "rest/estimates";
-				var xmlhttp = new XMLHttpRequest();
-				xmlhttp.open("GET", queryUrl, true);
-				xmlhttp.addEventListener("readystatechange",handleEstimates,false);
-				xmlhttp.setRequestHeader("Accept", "application/json");
-				xmlhttp.send();
+				var httpRequest = new XMLHttpRequest();
+				httpRequest.open("GET", queryUrl, true);
+				httpRequest.addEventListener("readystatechange",handleEstimates,false);
+				httpRequest.setRequestHeader("Accept", "application/json");
+				httpRequest.send();
 			}
 
 		    function fetchPriorities() {
 				var queryUrl = "rest/priorities";
-				var xmlhttp = new XMLHttpRequest();
-				xmlhttp.open("GET", queryUrl, true);
-				xmlhttp.addEventListener("readystatechange",handlePriorities,false);
-				xmlhttp.setRequestHeader("Accept", "application/json");
-				xmlhttp.send();
+				var httpRequest = new XMLHttpRequest();
+				httpRequest.open("GET", queryUrl, true);
+				httpRequest.addEventListener("readystatechange",handlePriorities,false);
+				httpRequest.setRequestHeader("Accept", "application/json");
+				httpRequest.send();
 		    }
 
 			function fetchStatuses() {
 				var queryUrl = "rest/statuses";
-				var xmlhttp = new XMLHttpRequest();
-				xmlhttp.open("GET", queryUrl, true);
-				xmlhttp.addEventListener("readystatechange",handleStatuses,false);
-				xmlhttp.setRequestHeader("Accept", "application/json");
-				xmlhttp.send();
+				var httpRequest = new XMLHttpRequest();
+				httpRequest.open("GET", queryUrl, true);
+				httpRequest.addEventListener("readystatechange",handleStatuses,false);
+				httpRequest.setRequestHeader("Accept", "application/json");
+				httpRequest.send();
 			}
 
 			function handleEstimates(evt) {
     			if (evt.target.readyState == 4 ) {
     				if(evt.target.status == 200) {
-    					estimateArray = JSON.parse(evt.target.responseText);
+    					var estimateArray = JSON.parse(evt.target.responseText);
     			        var estimateSelect = document.getElementById("estimate");
         			    for(i = 0; i < estimateArray.length; i++) {
         			        var option = document.createElement('option');
@@ -78,12 +76,12 @@
 			function handlePriorities(evt) {
     			if (evt.target.readyState == 4 ) {
     				if(evt.target.status == 200) {
-    					var jsArray = JSON.parse(evt.target.responseText);
+    					var priorityArray = JSON.parse(evt.target.responseText);
     			        var prioritySelect = document.getElementById("priority");
-        			    for(i = 0; i < jsArray.length; i++) {
+        			    for(i = 0; i < priorityArray.length; i++) {
         			        var option = document.createElement("option");
-							option.value = jsArray[i].id;
-							option.innerHTML = jsArray[i].name;
+							option.value = priorityArray[i].id;
+							option.innerHTML = priorityArray[i].name;
 							prioritySelect.appendChild(option);
         			    }
     				}
@@ -101,12 +99,12 @@
 			function handleStatuses(evt) {
     			if (evt.target.readyState == 4 ) {
     				if(evt.target.status == 200) {
-    					var jsArray = JSON.parse(evt.target.responseText);
+    					var statusArray = JSON.parse(evt.target.responseText);
     			        var statusSelect = document.getElementById("status");
-        			    for(i = 0; i < jsArray.length; i++) {
+        			    for(i = 0; i < statusArray.length; i++) {
         			        var option = document.createElement("option");
-							option.value = jsArray[i].id;
-							option.innerHTML = jsArray[i].name;
+							option.value = statusArray[i].id;
+							option.innerHTML = statusArray[i].name;
 							statusSelect.appendChild(option);
         			    }
     				}
@@ -131,12 +129,11 @@
 				var actions = document.getElementById("actions").value;
 				var start = document.getElementById("start").value;
 				var deadline = document.getElementById("deadline").value;
-				//alert("deadline = " + deadline);
 				var estimate_id = document.getElementById("estimate").value;
 				//alert("estimate_id = " + estimate_id);
-				//var priority = document.getElementById("priority").value;
-				//var status = document.getElementById("status").value;
-				// build JSON project object
+				var priority_id = document.getElementById("priority").value;
+				var status_id = document.getElementById("status").value;
+				// build project object
                 var projectObject = new Object();
                 projectObject.description = description;
                 projectObject.goals = goals;
@@ -147,15 +144,50 @@
                 estimateObject.id = estimate_id;
                 estimateObject.name = "";
                 projectObject.estimate = estimateObject;
-                //jsObject.estimate.id = estimate_id;
-                //js.Object.estimate.name = estimateArray[parseInt()].name;
-                //jsObject.actions = actions;
-                //jsObject.actions = actions;
+                var priorityObject = new Object();
+                priorityObject.id = priority_id
+                priorityObject.name = "";
+                projectObject.priority = priorityObject;
+                var statusObject = new Object();
+                statusObject.id = status_id;
+                statusObject.name = "";
+                projectObject.status = statusObject;
+                projectObject.linkable = new Array();
+                projectObject.presupposed = new Array();
+                projectObject.type = "projectDTO"; // Is this needed?
 
+                // write JSON data for debugging
                 document.getElementById("json").innerHTML= JSON.stringify(projectObject, null, 2);
-                // TODO: Send to server and view result
+                // Send to server and view result
+   				var url = "rest/projects";
+   				//alert("url: " + url);
+				var httpRequest = new XMLHttpRequest();
+				httpRequest.open("POST", url, true);
+				httpRequest.addEventListener("readystatechange",handleCreatedProject,false);
+				httpRequest.setRequestHeader("Content-Type", "application/json; charset=utf-8");
+				httpRequest.send(JSON.stringify(projectObject));
             }
 
+            function handleCreatedProject(evt) {
+                //alert(evt.target.readyState);
+                if (evt.target.readyState == 4 ) {
+					if(evt.target.status==201) {
+						var location = evt.target.getResponseHeader("Location");
+						//var search = "/rest/projects/";
+						var index = location.lastIndexOf("/");
+						var id = location.substring(parseInt(index + 1));
+						//sessionStorage.setItem("pid", id);
+						//window.location.href = "view_project.html";
+						//alert("Id for new project: " + id);
+    					document.getElementById("result").innerHTML = location;
+					}
+				    else {
+                        //alert("Unexpected response status " + evt.target.status);
+                        sessionStorage.setItem("error", "Unexpected response status " + evt.target.status);
+						window.location.href = "error.html";
+				    }
+				}
+            }
 
         </script>
     </head>
@@ -172,11 +204,11 @@
         <table style="margin-top: 12px">
             <tr>
                 <td><b>Start</b></td>
-                <td><input type="date" id="start"></td>
+                <td><input type="text" maxlength="10" size="10" id="start"></td>
             </tr>
             <tr>
                 <td><b>Deadline</b></td>
-                <td><input type="date" id="deadline"></td>
+                <td><input type="text" maxlength="10" size="10" id="deadline"></td>
             </tr>
             <tr>
                 <td><b>Estimate</b></td>
@@ -194,5 +226,6 @@
         <p><button id="create">Create</button></p>
         <p><a href="index.html">Home</a></p>
         <pre id="json">&nbsp;</pre>
+        <pre id="result">&nbsp;</pre>
     </body>
 </html>
